Fix user selection behaviour with Turbolinks and fix overflow #137207392159559

--- a/app/assets/stylesheets/views/roles.css.scss
+++ b/app/assets/stylesheets/views/roles.css.scss
@@ -21,3 +21,6 @@
     width: 50%;
   }
 }
+section.role-info {
+  overflow: inherit;
+}
